--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
     </header>
     <main>
         <div class="container">
-            <form action="" class="form">
+            <form action="" class="form" id="form">
                 <div class="form-control">
                     <label for="username">Username</label>
                     <input type="text" id="username" placeholder="ahmad21">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle" id="check"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
                 </div>
                 <div class="form-control">
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="ahmad@gmail.com">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle" id="check"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
                 </div>
                 <div class="form-control">
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Password">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle" id="check"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
                 </div>
                 <div class="form-control">
                     <label for="passwordTwo">Password Check</label>
                     <input type="password" id="passwordTwo" placeholder="Type The Password Again">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle" id="check"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
                 </div>
